--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,6 +15,10 @@
 
   <body>
     <h1>Shortly</h1>
+    <!-- <button type="button">Logout</button> -->
+    <form action="/logout" method="get">
+      <input type="submit" value="Logout" name="Logout" id="Logout" />
+    </form>
     <%- body %>
   </body>
 </html>
